<resources>
    <string name="app_name">VCV</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_path">Path</string>
    <string name="title_myProfile">My Profile</string>
    <string name="title_hourMonth">Hour Month</string>

    <string name="login">LOGIN</string>
    <string name="signin">SIGNIN</string>
    <string name="email_capitalize">Email</string>
    <string name="pssw_capitalize">Password</string>
    <string name="forget_pssw_capitalize"><u>Forgot password</u></string>
    <string name="name_capitalize">Name</string>
    <string name="surname_capitalize">Surname</string>
    <string name="phone_number_capitalize">Phone</string>
    <string name="service_hours">Service Hours</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="job">Job:</string>
    <string name="confirm">Confirm</string>
    <string name="modify">Modify</string>
    <string name="effectiveHours">Effective Hours</string>
    <string name="StartHour">Start Hour</string>
    <string name="totalHour">Total Hour</string>
    <string name="extraordinary">Extraordinary:</string>
    <string name="equipment">Equipment</string>
    <string name="note">Note</string>
    <string name="endHour">End Hour</string>
    <string name="confirm_pssw_capitalize">Confirm password</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="viewPaths">View Paths</string>
    <string name="selectPath">Select path:</string>
    <string name="google_maps_key" translatable="false">AIzaSyB_ofOjYE3Si16x9rDvlbnVD4gnrGSjfbw</string>
    <string name="can_not_load_image">Can not load image</string>
    <string name="success_remove_image">Image removed with success</string>
    <string name="error_remove_image">Some problems occurs while removing profile image</string>
    <string name="take_picture">Take picture</string>
    <string name="cancel">Cancel</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="choose_profile_pic_title">Choose your profile picture</string>
    <string name="hourWork">Hour you should work:</string>
    <string name="hourReallyWork">Hour you worked:</string>
    <string name="forgot_password">Forgot password</string>
    <string name="explain_forgot_password">Please, insert email address which you can access, so that we can send it reset password email</string>
    <string name="send_reset_pssw">We have sent an email to the specified address</string>
    <string name="send_reset_pssw_error">Some problems occurs when we try to send email to specified email address</string>
    <string name="badge_number">Badge number</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="send_email_check">An email has been sent to</string>
    <string name="send_email_error">Failed to send verification email</string>
    <string name="send">Send</string>
    <string name="reset_password">Reset password</string>
    <string name="change_field">Wrong data</string>
    <string name="biometric_negative">Use account password</string>
    <string name="biometric_subtitle">Log in using your biometric credential</string>
    <string name="biometric_title">Biometric login</string>
    <string name="authentication_succes">Authentication succes</string>
    <string name="new_notification">You have new orders, check out your calendar</string>
    <string name="no_information">No information available</string>
    <string name="day_confirmed">You have confirmed your daily order</string>
    <string name="detail">Detail</string>
    <string name="please_change_fields">Please change fields, or check its format, to save</string>
    <string name="save_data_success">Data saved with success</string>
    <string name="attention">Attention</string>
    <string name="from_label_recap">"Hours calculate from "</string>
    <string name="to_label_recap">to</string>
    <string name="choose_period">Choose period:</string>

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
