<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calendar">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.vcv.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_path"
        android:name="com.example.vcv.ui.path.PathFragment"
        android:label="@string/title_path"
        tools:layout="@layout/fragment_path" />

    <fragment
        android:id="@+id/navigation_myProfile"
        android:name="com.example.vcv.ui.myProfile.MyProfileFragment"
        android:label="@string/title_myProfile"
        tools:layout="@layout/fragment_myprofile" />

    <fragment
        android:id="@+id/navigation_hourMonth"
        android:name="com.example.vcv.ui.hourMonth.HourMonthFragment"
        android:label="@string/title_hourMonth"
        tools:layout="@layout/fragment_hourmonth" />
</navigation>
