<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/name_capitalize"
            android:layout_marginBottom="20dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/user"
            android:drawableLeft="@drawable/user" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/surname_capitalize"
            android:layout_marginBottom="20dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/user"
            android:drawableLeft="@drawable/user" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/phone_number_capitalize"
            android:layout_marginBottom="20dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/phone"
            android:drawableLeft="@drawable/phone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/email_capitalize"
            android:layout_marginBottom="20dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/email"
            android:drawableLeft="@drawable/email" />

    </LinearLayout>
</ScrollView>