<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_my_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="56dp"
    android:fillViewport="true"
    android:padding="15dp"
    tools:context=".ui.myProfile.MyProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_name_user_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/user"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/name_capitalize"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_surname_user_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/user"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/surname_capitalize"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_telephone_user_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/phone"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="10dp"
            android:hint="@string/phone_number_capitalize"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et_email_signin_user_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/email"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp"
            android:hint="@string/email_capitalize"
            android:inputType="textEmailAddress" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">

            <Button
                android:id="@+id/b_change_password"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_confirm"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:textSize="12sp"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/button_confirm"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>