<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ForgotPasswordActivity">

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/lock"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="10dp"
        android:hint="@string/pssw_capitalize"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_new_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/lock"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_pssw_capitalize"
        android:inputType="textPassword" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@drawable/button_confirm"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

</LinearLayout>