<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.calendar.ModifyCalendarFragment"
    android:id="@+id/modifyCalendarFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:id="@+id/box_calendarHour"
            android:layout_gravity="center"
            android:background="@drawable/login_border"
            android:padding="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:id="@+id/container_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:paddingTop="15dp"
                    android:paddingRight="25dp"
                    android:text="@string/service_hours"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:id="@+id/textHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textHourStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:paddingLeft="25dp"
                        android:paddingTop="15dp"
                        android:text="@string/start"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/HourStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:paddingRight="25dp"
                        android:paddingTop="15dp"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@+id/textHourEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:paddingLeft="25dp"
                        android:paddingTop="15dp"
                        android:text="@string/end"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/HourEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:paddingRight="25dp"
                        android:paddingTop="15dp"
                        android:textSize="16sp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/boxJob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textJob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="25dp"
                        android:paddingTop="15dp"
                        android:text="@string/job"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/job"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:paddingRight="25dp"
                        android:paddingTop="15dp"
                        android:textSize="16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/boxButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"/>
            </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:layout_gravity="center"
                android:background="@drawable/login_border"
                android:padding="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">
                <LinearLayout
                    android:id="@+id/containerHours"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textEffectiveHours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="25dp"
                        android:paddingTop="15dp"
                        android:paddingRight="25dp"
                        android:text="@string/effectiveHours"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp">
                        <EditText
                            android:id="@+id/et_Job"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/job"
                            android:layout_marginBottom="15dp"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_work_black_24dp"
                            android:drawableLeft="@drawable/ic_work_black_24dp" />
                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp">
                        <EditText
                            android:id="@+id/et_startHour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/StartHour"
                            android:layout_marginBottom="15dp"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_access_time_black_24dp"
                            android:drawableLeft="@drawable/ic_access_time_black_24dp"
                            android:layout_alignParentLeft="true"/>
                        <EditText
                            android:id="@+id/et_endHour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/endHour"
                            android:layout_marginBottom="15dp"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_access_time_black_24dp"
                            android:drawableLeft="@drawable/ic_access_time_black_24dp"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp">
                        <EditText
                            android:id="@+id/et_totalHour"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/totalHour"
                            android:layout_marginBottom="15dp"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_access_time_black_24dp"
                            android:drawableLeft="@drawable/ic_access_time_black_24dp" />
                        <EditText
                            android:id="@+id/et_extraordinaryHour"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/extraordinary"
                            android:layout_marginBottom="15dp"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_access_time_black_24dp"
                            android:drawableLeft="@drawable/ic_access_time_black_24dp" />
                        <EditText
                            android:id="@+id/et_equipment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/equipment"
                            android:layout_marginBottom="15dp"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_build_black_24dp"
                            android:drawableLeft="@drawable/ic_build_black_24dp" />
                        <EditText
                            android:id="@+id/et_note"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/note"
                            android:layout_marginBottom="15dp"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_note_add_black_24dp"
                            android:drawableLeft="@drawable/ic_note_add_black_24dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/button_modify"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/button_confirm"
                android:text="@string/confirm"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</ScrollView>