<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_login"
    android:id="@+id/container_login"
    android:background="@drawable/background_login"
    android:orientation="vertical"
    android:weightSum="12">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical"
        android:id="@+id/form_login"
        android:layout_gravity="center"
        android:background="@drawable/login_border"
        android:padding="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp">

        <LinearLayout
            android:id="@+id/container_switch_operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:background="@drawable/tab_left_border_selected"
                android:onClick="clickLogin" />

            <Button
                android:id="@+id/b_signin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signin"
                android:background="@drawable/tab_right_border"
                android:onClick="clickSignin" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_fragment"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="70dp" >

            <fragment
                android:id="@+id/body_login_signin_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.example.vcv.ui.home.HomeFragment" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="-20dp" >

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/access_uppercase"
            android:textSize="12sp"
            android:background="@drawable/button_confirm"
            android:textColor="@color/white"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forget_pssw_capitalize"
        android:layout_marginTop="20dp" />
</LinearLayout>